--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Project</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Unkempt&display=swap" rel="stylesheet">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
