--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Final Project</title>
+
+  <meta property="og:title" content="Fifapedia">
+  <meta property="og:type" content="application" />
+  <meta property="og:image" content="fifapedia.fifapedia.app/images/open-graph-image.jpg">
+  <meta property="og:url" content="https://github.com/Tarekchaaban/Fifapedia">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <meta property="og:description" content="PERN-stack application for soccer enthusiasts to keep track of their favorite teams and players.">
+  <meta property="og:site_name" content="Fifapedia">
+  <meta name="twitter:image:alt" content="Alt text for image">
+
+  <title>Fifapedia</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Unkempt&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/Favicon.png">
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
