completed deployment adjustments-5

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Fifapedia">
   <meta property="og:type" content="application" />
   <meta property="og:image" content="fifapedia.fifapedia.app/images/open-graph-image.jpg">
-  <meta property="og:url" content="https://github.com/Tarekchaaban/Fifapedia">
+  <meta property="og:url" content="https://fifapedia.fifapedia.app/">
   <meta name="twitter:card" content="summary_large_image">
 
   <meta property="og:description" content="PERN-stack application for soccer enthusiasts to keep track of their favorite teams and players.">
